# ocs2

ocs2/: CMakeLists.txt  package.xml
ocs2_core/: CMakeLists.txt  package.xml
ocs2_ddp/: CMakeLists.txt  package.xml
ocs2_doc/: CMakeLists.txt  package.xml
ocs2_frank_wolfe/: CMakeLists.txt  package.xml
ocs2_ipm/: CMakeLists.txt  package.xml
ocs2_mpc/: CMakeLists.txt  package.xml
ocs2_mpcnet/: CMakeLists.txt  package.xml
ocs2_msgs/: CMakeLists.txt  package.xml
ocs2_msgs/msg/: MpcFlattenedController.msg  MpcTargetTrajectories.msg
ocs2_oc/: CMakeLists.txt  package.xml
ocs2_ocs2/: CMakeLists.txt  package.xml
ocs2_perceptive/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_pinocchio/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision/src/: PinocchioGeometryInterface.cpp
ocs2_pinocchio/ocs2_self_collision_visualization/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_self_collision_visualization/include/ocs2_self_collision_visualization/: GeometryInterfaceVisualization.h
ocs2_pinocchio/ocs2_self_collision_visualization/src/: GeometryInterfaceVisualization.cpp
ocs2_pinocchio/ocs2_sphere_approximation/: CMakeLists.txt  package.xml
ocs2_pinocchio/ocs2_sphere_approximation/src/: PinocchioSphereInterface.cpp
ocs2_python_interface/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_legged_robot_raisim/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim_core/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim_ros/: CMakeLists.txt  package.xml
ocs2_raisim/ocs2_raisim_ros/include/ocs2_raisim_ros/: RaisimHeightmapRosConverter.h
ocs2_raisim/ocs2_raisim_ros/src/: RaisimHeightmapRosConverter.cpp
ocs2_robotic_assets/: CMakeLists.txt  package.xml
ocs2_robotic_assets/include/ocs2_robotic_assets/: package_path.h
ocs2_robotic_examples/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_cartpole/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_cartpole/test/: CMakeLists.txt
ocs2_robotic_examples/ocs2_cartpole_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_cartpole_ros/include/ocs2_cartpole_ros/: CartpoleDummyVisualization.h
ocs2_robotic_examples/ocs2_cartpole_ros/launch/: cartpole.launch.py  multiplot.launch.py
ocs2_robotic_examples/ocs2_cartpole_ros/src/: CartpoleDummyVisualization.cpp  CartpoleMpcNode.cpp  DummyCartpoleNode.cpp
ocs2_robotic_examples/ocs2_double_integrator/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator/include/ocs2_double_integrator/: package_path.h
ocs2_robotic_examples/ocs2_double_integrator_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_double_integrator_ros/include/ocs2_double_integrator_ros/: DoubleIntegratorDummyVisualization.h
ocs2_robotic_examples/ocs2_double_integrator_ros/launch/: double_integrator.launch.py  multiplot.launch.py  visualize.launch.py
ocs2_robotic_examples/ocs2_double_integrator_ros/rviz/: double_integrator.rviz
ocs2_robotic_examples/ocs2_double_integrator_ros/src/: DoubleIntegratorDummyVisualization.cpp  DoubleIntegratorMpcNode.cpp  DoubleIntegratorTargetPoseCommand.cpp  DummyDoubleIntegratorNode.cpp
ocs2_robotic_examples/ocs2_robotic_examples/: package.xml
ocs2_robotic_tools/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/: CMakeLists.txt  package.xml
ocs2_ros_interfaces/include/ocs2_ros_interfaces/command/: TargetTrajectoriesInteractiveMarker.h  TargetTrajectoriesKeyboardPublisher.h  TargetTrajectoriesRosPublisher.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/common/: RosMsgConversions.h  RosMsgHelpers.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/mpc/: MPC_ROS_Interface.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/mrt/: MRT_ROS_Interface.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/synchronized_module/: RosReferenceManager.h  SolverObserverRosCallbacks.h
ocs2_ros_interfaces/include/ocs2_ros_interfaces/visualization/: VisualizationHelpers.h
ocs2_ros_interfaces/src/command/: TargetTrajectoriesInteractiveMarker.cpp  TargetTrajectoriesKeyboardPublisher.cpp  TargetTrajectoriesRosPublisher.cpp
ocs2_ros_interfaces/src/common/: RosMsgConversions.cpp
ocs2_ros_interfaces/src/mpc/: MPC_ROS_Interface.cpp
ocs2_ros_interfaces/src/mrt/: MRT_ROS_Dummy_Loop.cpp  MRT_ROS_Interface.cpp
ocs2_ros_interfaces/src/multiplot/: MultiplotRemap.cpp
ocs2_ros_interfaces/src/synchronized_module/: RosReferenceManager.cpp  SolverObserverRosCallbacks.cpp
ocs2_ros_interfaces/src/visualization/: VisualizationHelpers.cpp
ocs2_slp/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_blasfeo/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_hpipm/: CMakeLists.txt  package.xml
ocs2_sqp/ocs2_hpipm/src/: HpipmInterface.cpp
ocs2_sqp/ocs2_sqp/: CMakeLists.txt  package.xml
ocs2_test_tools/ocs2_qp_solver/: CMakeLists.txt  package.xml
ocs2_thirdparty/: CMakeLists.txt  package.xml
