<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ocs2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="duyongquan1@xiaomi.com">quandy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ocs2_core</exec_depend>
  <exec_depend>ocs2_ddp</exec_depend> 
  <exec_depend>ocs2_frank_wolfe</exec_depend> 
  <!-- <exec_depend>ocs2_ipm</exec_depend>  -->
  <exec_depend>ocs2_msgs</exec_depend> 
  <exec_depend>ocs2_mpc</exec_depend> 
  <exec_depend>ocs2_oc</exec_depend>
  <exec_depend>ocs2_ocs2</exec_depend>
  <exec_depend>ocs2_perceptive</exec_depend>
  <exec_depend>ocs2_pinocchio</exec_depend> 
  <exec_depend>ocs2_robotic_assets</exec_depend>
  <exec_depend>ocs2_robotic_tools</exec_depend>
  <!-- <exec_depend>ocs2_ros_interfaces</exec_depend> -->
  <exec_depend>ocs2_slp</exec_depend>
  <!-- <exec_depend>ocs2_sqp</exec_depend>  -->
  <exec_depend>ocs2_qp_solver</exec_depend> 
  <exec_depend>ocs2_thirdparty</exec_depend>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
